# Clarus

./: .gitignore  LICENSE  README.md  REVIEW_README.md  app.py  conflict_resolving.py  env.example  fast_whisper.html  fast_whisper.js  fast_whisper.py  idea_capture.py  langgraph.json  main.py  prompts_in_conflict_resolving.yaml  prompts_in_idea_capture.yaml  prompts_in_structure.yaml  pyproject.toml  requirements.txt  review.py  run_review_demo.py  run_ui.py  simple_test.py  streamlit_app.py  streamlit_review.py  streamlit_voice.py  structure.py  structure_mode.py  whisper.html  whisper.py
data/: generated_assertions.jsonl  generated_relations.jsonl  selected_paper_abstracts.jsonl
models/: __init__.py  assertions.py  states.py
src/: get_assertions_and_relations.py  get_assertions_and_relations_openai.py  prepare_data.py
src/utils/: relation_prompts.py
ui/: __init__.py  common.py  idea_ui.py  prose_ui.py  review_ui.py  structure_ui.py
voice/: __init__.py  streamlit_voice.py
workflows/: __init__.py  conflict_resolving.py  idea_capture.py  prose.py  review.py  structure.py
